feat: add render pizzas from db.json / add Routing / categories and sort functional

--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -46,6 +46,10 @@
           border-radius: 5px;
           cursor: auto;
         }
+        &.disbale {
+          opacity: 0.3;
+          pointer-events: none;
+        }
       }
     }
   }
