--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -7,6 +7,7 @@
     url('../fonts/ProximaNova-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -18,6 +19,7 @@
     url('../fonts/ProximaNova-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,6 +31,7 @@
     url('../fonts/ProximaNova-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -40,4 +43,5 @@
     url('../fonts/ProximaNova-Extrabld.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
