feat: add ыelection size and type ща pizzas

--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -46,7 +46,7 @@
           border-radius: 5px;
           cursor: auto;
         }
-        &.disbale {
+        &.disabled {
           opacity: 0.3;
           pointer-events: none;
         }
