--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,9 +24,10 @@ body {
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    justify-items: center;
+    gap: 35px
   }
 
   &__top {
