--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -43,9 +43,12 @@ body {
 
   &--cart {
     max-width: 820px;
-    margin: 90px auto;
+    margin: 20px auto;
     .content__title {
       margin: 0;
+    }
+    .content__items {
+      display: block;
     }
   }
 }
