feat: add cart clear, add item, remove

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -240,6 +240,7 @@ body {
         align-items: center;
         justify-content: center;
         width: 210px;
+        height: 100%;
 
         border-color: darken($color: $gray-line, $amount: 10);
 
@@ -293,7 +294,7 @@ body {
       color: #777777;
     }
 
-    icon {
+    span.icon {
       position: relative;
       top: 2px;
     }
